[gd_scene load_steps=2 format=3 uid="uid://kjlfckhhcg2v"]

[ext_resource type="Script" path="res://poc/assets/scripts/player/ability_slot.gd" id="1_qfg3j"]

[node name="Ability" type="Node"]
script = ExtResource("1_qfg3j")

[node name="CooldownTimer" type="Timer" parent="."]
one_shot = true

[node name="CastTimer" type="Timer" parent="."]
one_shot = true

[node name="AbilitySound" type="AudioStreamPlayer" parent="."]
volume_db = -15.0
